--- a/bloggy_project/templates/blog/index.html
+++ b/bloggy_project/templates/blog/index.html
@@ -1,10 +1,23 @@
-<h1>Bloggy: a blog app</h1>
-{% if latest_posts %}
-<ul>
-    {% for post in latest_posts %}
-        <li>
-            {{post.created_at}} | {{post.title}} | {{post.content}}
-        </li>
-    {% endfor %}
-</ul>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="description" content="FlaskTaskr - Task Management App!" />
+        <meta name="keywords" content="FlaskTaskr, Task, Tasks, Management" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Bloggy: a blog app</title>
+    </head>
+    <body>
+        <h2>Welcome to Bloggy!</h2>
+        {% if latest_posts %}
+        <ul>
+            {% for post in latest_posts %}
+                <h3><a href="/blog/{{post.id}}">{{ post.title }}</a></h3>
+                <p><em>{{ post.created_at }}</em></p>
+                <p>{{ post.content }}</p>
+                <br />
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </body>
+</html>
