Updated the meta tags in the index template

--- a/bloggy_project/templates/blog/index.html
+++ b/bloggy_project/templates/blog/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="FlaskTaskr - Task Management App!" />
-        <meta name="keywords" content="FlaskTaskr, Task, Tasks, Management" />
+        <meta name="description" content="Bloggy - A blog App!" />
+        <meta name="keywords" content="blog post, blog, posts, post" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bloggy: a blog app</title>
     </head>
