--- a/bloggy_project/templates/blog/index.html
+++ b/bloggy_project/templates/blog/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="Bloggy - A blog App!" />
-        <meta name="keywords" content="blog post, blog, posts, post" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bloggy: a blog app</title>
-    </head>
-    <body>
-        <h2>Welcome to Bloggy!</h2>
-        {% if latest_posts %}
+{% extends '_base.html' %}
+
+{% block content %}
+    {% if latest_posts %}
         <ul>
             {% for post in latest_posts %}
                 <h3><a href="/blog/{{ post.url }}">{{ post.title }}</a></h3>
@@ -18,6 +10,5 @@
                 <br />
             {% endfor %}
         </ul>
-        {% endif %}
-    </body>
-</html>
+    {% endif %}
+{% endblock %}
