updated the templates to reflect slugified urls

--- a/bloggy_project/templates/blog/post.html
+++ b/bloggy_project/templates/blog/post.html
@@ -23,7 +23,7 @@
         <ul>
             {% for popular_post in popular_posts %}
                 <li>
-                    <a href="/blog/{{ popular_post.title }}">
+                    <a href="/blog/{{ popular_post.slug }}">
                         {{ popular_post.title }}
                     </a>
                 </li>
